Created form for device setup.

--- a/src/main/resources/Application.fxml
+++ b/src/main/resources/Application.fxml
@@ -10,7 +10,7 @@
          styleClass="topLevelLabel"
          text="Devices"
          id="devices-tab">
-        <fx:include source="Devices.fxml" />
+        <fx:include source="DeviceSetup.fxml" />
     </Tab>
     <Tab closable="false" text="Sequence" id="sequence-tab">
         <fx:include source="Sequence.fxml" />
