--- a/src/main/resources/DeviceSetup.fxml
+++ b/src/main/resources/DeviceSetup.fxml
@@ -41,10 +41,16 @@
         <GridPane.columnIndex>1</GridPane.columnIndex>
     </ComboBox>
 
-    <TilePane>
+    <TilePane id="status-reporter">
         <GridPane.rowIndex>3</GridPane.rowIndex>
         <GridPane.columnIndex>0</GridPane.columnIndex>
-        <GridPane.columnSpan>2</GridPane.columnSpan>
+        <Text text="Status" id="status-bar-title"/>
+        <Text id="status-report" fx:id="statusReportField" />
+    </TilePane>
+
+    <TilePane>
+        <GridPane.rowIndex>3</GridPane.rowIndex>
+        <GridPane.columnIndex>1</GridPane.columnIndex>
         <Button id="go-button" text="Go" onAction="#handleGoButtonClicked"/>
     </TilePane>
 </GridPane>
