--- a/src/main/resources/Result.fxml
+++ b/src/main/resources/Result.fxml
@@ -9,6 +9,9 @@
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.Button?>
+
+<?import javafx.scene.chart.CategoryAxis?>
 <GridPane styleClass="root"
           xmlns="http://javafx.com/javafx/8.0.112"
           xmlns:fx="http://javafx.com/fxml/1"
@@ -43,14 +46,14 @@
     <GridPane styleClass="chart-panel">
         <GridPane.columnIndex>0</GridPane.columnIndex>
         <GridPane.rowIndex>2</GridPane.rowIndex>
-        <LineChart styleClass="live-chart">
+        <LineChart styleClass="live-chart" fx:id="pressureChart">
             <GridPane.columnIndex>0</GridPane.columnIndex>
             <GridPane.rowIndex>0</GridPane.rowIndex>
             <xAxis>
-                <NumberAxis label="Time /s"/>
+                <CategoryAxis label="Date" animated="false"/>
             </xAxis>
             <yAxis>
-                <NumberAxis label="Pressure / mBar"/>
+                <NumberAxis label="Pressure / 10^-10 mBar" animated="false"/>
             </yAxis>
         </LineChart>
 
@@ -70,6 +73,11 @@
                 <ComboBox />
             </HBox>
         </TilePane>
+
+        <Button text="Refresh" onAction="#handleRefreshButtonClicked">
+            <GridPane.columnIndex>0</GridPane.columnIndex>
+            <GridPane.rowIndex>3</GridPane.rowIndex>
+        </Button>
     </GridPane>
 
     <stylesheets>
