Added provider for voltage

--- a/src/main/resources/Result.fxml
+++ b/src/main/resources/Result.fxml
@@ -12,6 +12,9 @@
 <?import javafx.scene.control.Button?>
 
 <?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.Tab?>
 <GridPane styleClass="root"
           xmlns="http://javafx.com/javafx/8.0.112"
           xmlns:fx="http://javafx.com/fxml/1"
@@ -33,12 +36,22 @@
             <GridPane.rowIndex>1</GridPane.rowIndex>
             <GridPane.columnIndex>0</GridPane.columnIndex>
 
-            <TilePane styleClass="pressure-status">
+            <TilePane styleClass="status-line">
+                <GridPane.rowIndex>0</GridPane.rowIndex>
+                <GridPane.columnIndex>0</GridPane.columnIndex>
                 <Text text="Pressure"
                       styleClass="instrument-descriptor" />
                 <Text id="pressure"
                       styleClass="reported-variable"
                       fx:id="reportedPressure"/>
+            </TilePane>
+            <TilePane styleClass="status-line">
+                <GridPane.rowIndex>1</GridPane.rowIndex>
+                <GridPane.columnIndex>0</GridPane.columnIndex>
+                <Text text="Output Voltage"
+                      styleClass="instrument-descriptor" />
+                <Text id="voltage" styleClass="reported-variable"
+                      fx:id="reportedVoltage"/>
             </TilePane>
         </GridPane>
     </GridPane>
@@ -46,9 +59,10 @@
     <GridPane styleClass="chart-panel">
         <GridPane.columnIndex>0</GridPane.columnIndex>
         <GridPane.rowIndex>2</GridPane.rowIndex>
+
         <LineChart styleClass="live-chart" fx:id="pressureChart">
-            <GridPane.columnIndex>0</GridPane.columnIndex>
             <GridPane.rowIndex>0</GridPane.rowIndex>
+            <GridPane.columnIndex>0</GridPane.columnIndex>
             <xAxis>
                 <CategoryAxis label="Date" animated="false"/>
             </xAxis>
@@ -56,23 +70,19 @@
                 <NumberAxis label="Pressure / 10^-10 mBar" animated="false"/>
             </yAxis>
         </LineChart>
-
-        <TilePane styleClass="live-chart-controls">
-            <GridPane.columnIndex>1</GridPane.columnIndex>
-            <GridPane.rowIndex>0</GridPane.rowIndex>
-            <HBox styleClass="axis-control">
-                <Text text="X-Axis" />
-                <ComboBox />
-            </HBox>
-            <HBox styleClass="axis-control">
-                <Text text="Y-Axis" />
-                <ComboBox />
-            </HBox>
-            <HBox styleClass="axis-control">
-                <Text text="Y2-Axis" />
-                <ComboBox />
-            </HBox>
-        </TilePane>
+        <LineChart styleClass="top-chart, live-chart"
+                   fx:id="voltageChart">
+            <GridPane.columnIndex>0</GridPane.columnIndex>
+            <GridPane.rowIndex>1</GridPane.rowIndex>
+            <xAxis>
+                <CategoryAxis label="Date" animated="false"
+                              styleClass="voltage-x-axis"/>
+            </xAxis>
+            <yAxis>
+                <NumberAxis label="Voltage / V" animated="false"
+                            styleClass="voltage-y-axis"/>
+            </yAxis>
+        </LineChart>
 
         <Button text="Refresh" onAction="#handleRefreshButtonClicked">
             <GridPane.columnIndex>0</GridPane.columnIndex>
