--- a/src/main/resources/DeviceSetup.fxml
+++ b/src/main/resources/DeviceSetup.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.control.Button?>
-<GridPane alignment="CENTER"
-          xmlns="http://javafx.com/javafx/8.0.112"
+<GridPane xmlns="http://javafx.com/javafx/8.0.112"
           xmlns:fx="http://javafx.com/fxml/1"
           fx:controller="ui.controllers.DeviceSetupController"
           id="device-setup-form"
